Tests fix for ddBtn and input having different background colors when disabled on mobile

--- a/frontend/src/components/ui/CustomSelect.scss
+++ b/frontend/src/components/ui/CustomSelect.scss
@@ -205,6 +205,8 @@
     min-width: 60px;
 
     label {
+        background-color: hsla(v.$accent);
+
         p {
             left: calc(v.$default-label-x-offset + .75rem);
         }
